k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secuscan-ns
  labels:
    environment: dev
    project: secuscan
