k8s/07-scanner-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scanner-worker
  namespace: secuscan-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: scanner-worker
  template:
    metadata:
      labels:
        app: scanner-worker
    spec:
      containers:
        - name: scanner-worker
          image: sawyyy/secuscan-scanner-worker:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
