k8s/04-minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: secuscan-ns
spec:
  selector:
    app: minio
  ports:
    - name: api
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: console
      protocol: TCP
      port: 9001
      targetPort: 9001
  type: ClusterIP

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: secuscan-ns
spec:
  serviceName: "minio-svc"
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: cgr.dev/chainguard/minio
          command:
            - /bin/sh
            - -c
            - minio server /data --console-address ":9001"
          ports:
            - containerPort: 9000
            - containerPort: 9001
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "1"
          volumeMounts:
            - name: minio-data
              mountPath: /data

  volumeClaimTemplates:
    - metadata:
        name: minio-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
