k8s/06-upload-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upload-service-svc
  namespace: secuscan-ns
spec:
  selector:
    app: upload-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-service
  namespace: secuscan-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: upload-service
  template:
    metadata:
      labels:
        app: upload-service
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - upload-service
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: upload-service
          image: sawyyy/secuscan-upload-service:latest
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
          readinessProbe:
            httpGet:
              path: /api/results
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 10
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
