k8s/10-network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: secuscan-ns
spec:
  podSelector: {}
  policyTypes:
    - Ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-controller
  namespace: secuscan-ns
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values: [frontend, upload-service]
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: protect-postgres
  namespace: secuscan-ns
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: upload-service
        - podSelector:
            matchLabels:
              app: scanner-worker
        - podSelector:
            matchLabels:
              app: db-init-job
      ports:
        - protocol: TCP
          port: 5432

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: protect-data-stores
  namespace: secuscan-ns
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values: [redis, minio]
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: upload-service
        - podSelector:
            matchLabels:
              app: scanner-worker

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: protect-clamav
  namespace: secuscan-ns
spec:
  podSelector:
    matchLabels:
      app: clamav
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: scanner-worker
      ports:
        - protocol: TCP
          port: 3310
